--- a/style/assets.css
+++ b/style/assets.css
@@ -190,7 +190,7 @@ li a {
 	position: relative;
 	width: 100%;
 	height: 100%;
-	background: url(../IMGS/clock-template-.jpg);
+	background: url(../imgs/clock-template-.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: 50%;
